Fix home page layout broken on small screens
leftie/rightie:
  The max-width override was not taking effect as
  `[dir="ltr"] div.leftie` etc. have higher specificity (a media rule
  does not add specificity).

div.welcome:
  Remove its minimum height on narrow screens where it is now displayed
  on top of the user section.

div.usertop:
  Allow email to overflow and have its own scrollbar instead of making
  the whole page overflow.

--- a/website/furniture/public.css
+++ b/website/furniture/public.css
@@ -164,11 +164,14 @@ body.sitehome .invelope.top > div.clear {clear: both;}
 [dir="rtl"] div.rightie {float: right; width: 50%; box-sizing: border-box; border-right: 1px solid #03A491; padding: 20px 40px 20px 0px; position: relative; right: -1px;}
 @media (max-width: 800px){
   body.sitehome .invelope.top {margin-top: 50px;}
-  div.leftie {float: none; width: auto; box-sizing: border-box; padding: 0px 0px 0px 0px; border-right: 0px}
-  div.rightie {float: none; width: auto; box-sizing: border-box; padding: 40px 0px 0px 0px; border-left: 0px; left: 0px; margin-top: 40px;}
+  [dir="ltr"] div.leftie,
+  [dir="rtl"] div.leftie {float: none; width: auto; box-sizing: border-box; padding: 0px 0px 0px 0px; border-right: 0px}
+  [dir="ltr"] div.rightie,
+  [dir="rtl"] div rightie {float: none; width: auto; box-sizing: border-box; padding: 40px 0px 0px 0px; border-left: 0px; left: 0px; margin-top: 40px;}
 }
 
 div.welcome {font-size: 1.1rem; line-height: 1.5em; color: #666666; min-height: 500px;}
+@media (max-width: 800px){ div.welcome {min-height: unset;} }
 div.welcome > div.intro {color: #333333;}
 div.welcome > div.point { margin: 20px 0px;}
 div.welcome > div.point > div.title {}
@@ -188,6 +191,7 @@ div.welcome > div.point > div.subblurb > div.add {margin-top: 10px; padding-top:
 
 html[dir="ltr"] div.usertop {background-image: url(user.png); background-position: left center; background-repeat: no-repeat; padding-left: 80px; min-height: 60px; margin-bottom: 20px;}
 html[dir="rtl"] div.usertop {background-image: url(user.png); background-position: right center; background-repeat: no-repeat; padding-right: 80px; min-height: 60px; margin-bottom: 20px;}
+div.usertop { overflow-x: auto }
 div.usertop a {text-decoration: none; color: #047063;}
 div.usertop a:hover {color: #059080; }
 div.usertop > div.title {font-size: 1.5rem; padding-top: 10px;}
